k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: awesometarkov-com-prod
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
      annotations:
        linkerd.io/inject: enabled
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: web
          image: ghcr.io/uberswe/awesometarkov.com:main-f1c6f23
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
